<resources>
    <!--云盘 -->
    <string name="volume_clouddriver_my_file">我的文件</string>
    <string name="volume_clouddriver_share_volume">共享网盘</string>
    <string name="volume_clouddriver_input_file_name">请输入文件名称</string>
    <string name="volume_clouddriver_input_directory_name">请输入文件夹名称</string>
    <string name="volume_clouddriver_select_nothing">全不选</string>
    <string name="volume_clouddriver_multi_select">多选</string>
    <string name="volume_clouddriver_has_selected">已选择%1$d个文件</string>
    <string name="volume_clouddriver_sure_delete_file">确定要删除所选文件吗？</string>
    <string name="volume_clouddriver_move2_current_directory">移动到当前目录</string>
    <string name="volume_clouddriver_copy2_current_directory">复制到当前目录</string>
    <string name="volume_clouddriver_create_volume">新建网盘</string>
    <string name="volume_clouddriver_upload_success">上传成功</string>
    <string name="volume_clouddriver_select_copy_position">选择复制位置</string>
    <string name="volume_clouddriver_select_move_position">选择目标文件夹</string>
    <string name="volume_clouddriver_file_open_fail">文件打开失败！</string>
    <string name="volume_clouddriver_create_folder">新建文件夹</string>
    <string name="volume_clouddriver_current_directory_hint">当前目录：%1$s</string>
    <string name="volume_clouddriver_upload_waiting">等待上传</string>
    <string name="volume_clouddriver_upload_fail">上传失败</string>
    <string name="volume_clouddriver_upload_again">重新上传</string>
    <string name="volume_clouddriver_download_size">下载(%1$s)</string>
    <string name="volume_clouddriver_file_name_invaliad">名称中不能包含特殊字符 / \ " : | * ? &lt; &gt;</string>
    <string name="volume_clouddriver_select_photo">选择照片</string>
    <string name="volume_clouddriver_select_file">选择文件</string>
    <string name="volume_clouddriver_volume_info">网盘详情</string>
    <string name="volume_clouddriver_volume_name">网盘名称</string>
    <string name="volume_clouddriver_all_volume_member_size">全部网盘成员(%1$d)</string>
    <string name="volume_clouddriver_upload_permission">拥有上传/查看权限</string>
    <string name="volume_clouddriver_watch_permission">拥有查看权限</string>
    <string name="volume_clouddriver_sure_delete_volume">确定要删除所选网盘吗？</string>
    <string name="volume_clouddriver_del_member">删除网盘成员</string>
    <string name="volume_clouddriver_all_group_member_size">全部组成员(%1$d)</string>
    <string name="volume_clouddriver_add_volume_member">添加网盘成员</string>
    <string name="volume_clouddriver_del_volume_group_member">删除组成员</string>
    <string name="volume_clouddriver_add_volume_group_member">添加组成员</string>
    <string name="volume_clouddriver_directory_name_invaliad">文件夹名中不能包含特殊字符 / \ " : | * ? &lt; &gt;  </string>
    <string name="volume_clouddriver_volume_name_invaliad">网盘名中不能包含特殊字符 / \ " : | * ?  &lt; &gt; </string>
    <string name="volume_clouddriver_exists_same_name">已存在同名文件/文件夹</string>
    <string name="volume_clouddriver_volume_group_info">组详情</string>
    <string name="volume_clouddriver_volume_group_member">组成员</string>
    <string name="volume_clouddriver_volume_member">网盘成员</string>
    <string name="volume_clouddriver_input_volume_name">请输入网盘名称</string>
    <string name="volume_clouddriver_input_volume_group_name">请输入组名称</string>
    <string name="volume_clouddriver_update_volume_name">更改网盘名称</string>
    <string name="volume_clouddriver_update_group_name">更改组名称</string>
    <string name="volume_clouddriver_file_no_exist">选择的文件不存在！</string>
    <string name="volume_clouddriver_no_directory">暂无文件夹</string>
    <string name="volume_clouddriver_copy_to">复制到</string>
    <string name="volume_file_exist_current_directory">该文件已在当前文件夹</string>
    <string name="volume_file_cannot_copy_here">不能将文件复制到自身或其子目录下</string>
    <string name="volume_file_cannot_move_here">不能将文件移动到自身或其子目录下</string>
    <string name="volume_clouddriver_volume_file_filter">分类筛选</string>
    <string name="volume_clouddriver_volume_group_name">组名称</string>
    <string name="volume_clouddriver_file_permission_manager">权限管理</string>
    <string name="volume_clouddriver_volume_upload_file">上传文件</string>
    <string name="volume_clouddriver_volume_upload_image">上传图片</string>
    <string name="volume_clouddriver_volume_upload_take_photo">拍照上传</string>
    <string name="volume_clouddriver_volume_frist_download">转发前请将文件下载至本地</string>
    <string name="volume_upload_to_current_directory">上传到当前目录</string>
    <string name="volume_file_open">打开</string>
    <string name="volume_rename">重命名</string>
    <string name="volume_move_to">移动到</string>
    <string name="volume_copy">复制</string>
    <string name="volume_move">移动</string>
    <string name="volume_upload_cancel">取消上传</string>
    <string name="volume_refresh">刷新</string>
    <string name="volume_create">新建</string>
    <string name="volume_group">组</string>
    <string name="volume_file_rename">文件重命名</string>
    <string name="volume_folder_rename">文件夹重命名</string>
    <string name="volume_cloud_drive">云盘</string>
    <string name="volume_file_upload_network_type_warning">当前处于非Wi-Fi环境，继续上传将消耗运营商流量，请确认是否继续</string>
    <string name="volume_file_download_network_type_warning">当前处于非Wi-Fi环境，继续下载将消耗运营商流量，请确认是否继续</string>
    <string name="volume_file_transfer">文件传输</string>
    <string name="volume_file_transfer_download_list">下载列表</string>
    <string name="volume_file_transfer_upload_list">上传列表</string>
    <string name="volume_file_transfer_list_wait_tip">正在等待&#8230;</string>
    <string name="volume_file_transfer_list_pause_tip">暂停中&#8230;</string>
    <string name="volume_file_transfer_list_download_count">正在下载&#8230;(%1$d)</string>
    <string name="volume_file_transfer_list_upload_count">正在上传&#8230;(%1$d)</string>
    <string name="volume_file_transfer_list_download_finish_count">下载完成&#160;(%1$d)</string>
    <string name="volume_file_transfer_list_upload_finish_count">上传完成&#160;(%1$d)</string>
    <string name="volume_file_transfer_list_pause">全部暂停</string>
    <string name="volume_file_transfer_list_continue">全部继续</string>
    <string name="volume_copy_between_volume_error_toast">%1$d 个文件复制失败</string>
    <string name="volume_copy_success">复制成功</string>
    <string name="volume_copy_fail">复制失败</string>
    <string name="volume_move_success">移动成功</string>
    <string name="volume_move_fail">移动失败</string>
    <string name="volume_has_no_data">暂无数据</string>

</resources>
